--- a/public/Login.html
+++ b/public/Login.html
@@ -18,21 +18,48 @@
     <h2>Iniciar Sesión</h2>
     <hr class="w-50" />
 
-    <form>
+    <form id="loginForm">
       <div class="form-group">
         <div class="form-group">
           <label>Email</label>
-          <input class="form-control w-50 m-auto" />
+          <input id="email-input" name="email" class="form-control w-50 m-auto" />
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input class="form-control w-50 m-auto" />
+          <input id="password-input" name="password" type="password" class="form-control w-50 m-auto" />
         </div>
       </div>
-      <button class="btn btn-success mb-3">Ingresar</button>
-      <p>¿Aún no tienes cuenta? <a href="#">Regístrate</a></p>
+      <button type="submit" class="btn btn-success mb-3">Ingresar</button>
+      <p>¿Aún no tienes cuenta? <a href="Registro.html">Regístrate</a></p>
     </form>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
+    integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script>
+
+    const loginForm = document.querySelector('#loginForm');
+
+    loginForm.addEventListener('submit', async (e) => {
+      try {
+        e.preventDefault();
+
+        const email = e.target.email.value;
+        const password = e.target.password.value;
+
+        const { data } = await axios.post('/api/v1/skaters/login', { email, password });
+
+        localStorage.setItem('email', email);
+        window.location.href = 'Datos.html';
+
+      } catch (error) {
+        console.error(error);
+        alert(error);
+      }
+    });
+  </script>
 </body>
 
 </html>
