--- a/public/Registro.html
+++ b/public/Registro.html
@@ -18,41 +18,66 @@
     <h2>Registro</h2>
     <hr class="w-50" />
 
-    <form>
+    <form id="registerForm" enctype="multipart/form-data">
       <div class="form-group row w-50 m-auto">
         <div class="form-group col-12 col-sm-6">
           <label>Email</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="email" name="email" required />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Nombre</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="nombre" name="nombre" required />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Password</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="password" name="password" type="password" required />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Repita la password</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="confirmPassword" name="confirmPassword" type="password" required />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Años de experiencia</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="anos_experiencia" name="anos_experiencia" required />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Especialidad</label>
-          <input class="form-control m-auto" />
+          <input class="form-control m-auto" id="especialidad" name="especialidad" required />
         </div>
         <div class="form-group col-12 col-sm-12">
           <label>Foto de perfil</label>
-          <input name="foto" type="file" />
+          <input name="foto" type="file" id="foto" required />
         </div>
       </div>
-      <button class="btn btn-info mb-3">Registrarme</button>
-      <p><a href="#"> Iniciar sesión</a></p>
+      <button class="btn btn-info mb-3" type="submit">Registrarme</button>
+      <p><a href="Login.html"> Iniciar sesión</a></p>
     </form>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
+    integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script>
+    const registerForm = document.querySelector('#registerForm');
+
+    registerForm.addEventListener('submit', async (e) => {
+      try {
+        e.preventDefault();
+        const formData = new FormData(registerForm);
+
+        const { data } = await axios.post('/api/v1/skaters/register', formData, {
+          headers: { 'Content-Type': 'multipart/form-data' }
+        });
+
+        localStorage.setItem('email', data.skater.email);
+        alert('Usuario creado... redirigiendo');
+        window.location.href = 'Login.html';
+      } catch (error) {
+        console.log(error);
+        alert(error.response.data.msg);
+      }
+    });
+  </script>
 </body>
 
 </html>
