--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
       </tbody>
     </table>
     <a href="Login.html">Iniciar Sesión</a> |
-    <a href="Registro.html">Registrarme</a>
+    <a href="Registro.html">Registrarme</a> |
+    <a href="Admin.html">Administradores</a>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
@@ -64,8 +65,8 @@
             `;
         });
       } catch (error) {
-        console.log(error)
-        alert(error.response.data.msg)
+        console.log(error);
+        alert(error.response.data.msg);
       }
     });
   </script>
